# hg_audio_course

./: README.md  main.py  pyproject.toml  req.txt
unit4/: pretrained_models.ipynb  sft.ipynb
